scoring/errlog/33.log
./scoring/source/33.cpp:1:1: error: non-ASCII characters are not allowed outside of literals and identifiers
ㅁㅇㄴㄹㅁㄴㅇ
^~
./scoring/source/33.cpp:1:4: error: non-ASCII characters are not allowed outside of literals and identifiers
ㅁㅇㄴㄹㅁㄴㅇ
  ^~
./scoring/source/33.cpp:1:7: error: non-ASCII characters are not allowed outside of literals and identifiers
ㅁㅇㄴㄹㅁㄴㅇ
    ^~
./scoring/source/33.cpp:1:10: error: non-ASCII characters are not allowed outside of literals and identifiers
ㅁㅇㄴㄹㅁㄴㅇ
      ^~
./scoring/source/33.cpp:1:13: error: non-ASCII characters are not allowed outside of literals and identifiers
ㅁㅇㄴㄹㅁㄴㅇ
        ^~
./scoring/source/33.cpp:1:16: error: non-ASCII characters are not allowed outside of literals and identifiers
ㅁㅇㄴㄹㅁㄴㅇ
          ^~
./scoring/source/33.cpp:1:19: error: non-ASCII characters are not allowed outside of literals and identifiers
ㅁㅇㄴㄹㅁㄴㅇ
            ^~
7 errors generated.
